src/Tests/Error/TypeFloatError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeFloatError extends AssertError
{
}
